--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Users_SP_DA</string>
     <string name="description_user_photo">Imagen de usuario</string>
+    <string name="sp_first_time">first_time</string>
 </resources>
